# ctf-cybersecurity

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  solver.py
backend/: init_tasks.py  pytest.ini
backend/api/: api_tests.py  models.py  serializers.py  tests.py  views.py
backend/api/migrations/: 0001_initial.py
backend/todo_api/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  LoginPage.js  RegisterPage.jsx  TaskList.jsx
